<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="resume">Resume</string>
    <string name="learnMore">Learn More</string>
    <string name="loading">Loading...</string>
    <string name="Func_cachedInputs_title">Previous Inputs Available</string>
    <string name="Func_cachedInputs_message">Do you want to load the previous inputs or start over?</string>
    <string name="Func_cachedInputs_action_new">Start Over</string>
    <string name="Func_cachedInputs_action_previous">Load Previous</string>
    <string name="Func_primary_intro">Get Started</string>
    <string name="Func_primary_execute">Continue</string>
    <string name="Func_primary_executing">Generating...</string>
    <string name="Func_input_drone">Mark</string>
    <string name="Func_input_drone_unavailable">Please connect a drone</string>
    <string name="Func_input_required">This input is required</string>
    <string name="Func_input_location_unavailable">"Drone location unavailable</string>
    <string name="Func_input_none">No Input</string>
    <string name="Func_input_choose">Choose...</string>
    <string name="Func_input_summary">Input Summary</string>
    <string name="Func_back">Back</string>
    <string name="Func_next">Next</string>
    <string name="Executable_start_countdown">Starting in</string>
    <string name="Executable_start_engaging">Preparing to execute...</string>
    <string name="Executable_start_cancelled">Countdown Stopped</string>
    <string name="Executable_start_engage_droneSerialNumberUnavailable_title">Unidentified Drone</string>
    <string name="Executable_start_engage_droneSerialNumberUnavailable_message">Unable to determine the serial number of your drone. Try reconnecting or power-cycling.</string>
    <string name="Executable_dismiss">Dismiss</string>
    <string name="Mission_details">3D Preview</string>
    <string name="Mission_details_network_error">You need a network connection for 3D previews.</string>
    <string name="Mission_cancel">Cancel</string>
    <string name="Mission_continue">Continue</string>
    <string name="Mission_estimating">Estimating flight path and time...</string>
    <string name="Mission_start_takeoffLocationWarning_title">Confirm Takeoff Location</string>
    <string name="Mission_start_takeoffLocationWarning_message_deviceAltitudeAvailable">The current takeoff location is %1$s from the planned takeoff location, which may cause the drone to fly at an unsafe offset from the planned altitudes. The GPS altitude of this device (%2$s) will be used to adjust AGL and MSL altitudes automatically.</string>
    <string name="Mission_start_takeoffLocationWarning_message_deviceAltitudeUnavailable">The current takeoff location is %1$s from the planned takeoff location, which may cause the drone to fly at an unsafe offset from the planned altitudes.</string>
    <string name="Mission_cameraFocusCalibrationsRequired_title">Camera Focus Calibration Required</string>
    <string name="Mission_cameraFocusCalibrationsRequired_message_single">This mission requires a camera focus calibration before running.</string>
    <string name="Mission_cameraFocusCalibrationsRequired_message_multiple">This mission requires %@ camera focus calibrations before running.</string>
    <string name="Mission_engaging">Starting Mission</string>
    <string name="Mission_disengaged">Mission Stopped</string>
    <string name="Telemetry_distance_prefix">D</string>
    <string name="Telemetry_distance_suffix_imperial">ft</string>
    <string name="Telemetry_distance_suffix_metric">m</string>
    <string name="Telemetry_altitude_prefix">A</string>
    <string name="Telemetry_horizontalSpeed_prefix">H/S</string>
    <string name="Telemetry_horizontalSpeed_suffix_imperial">mph</string>
    <string name="Telemetry_horizontalSpeed_suffix_metric">km/h</string>
    <string name="Telemetry_verticalSpeed_prefix">V/S</string>
    <string name="Telemetry_verticalSpeed_suffix_imperial">fps</string>
    <string name="Telemetry_verticalSpeed_suffix_metric">m/s</string>
    <string name="MissionDisengageReason_user_disengaged">Mission Paused</string>
    <string name="MapboxMap_reset">Reset</string>
    <string name="MapboxMap_drone_north_up">Follow (North Up)</string>
    <string name="MapboxMap_drone_heading">Follow Drone</string>
    <string name="MicrosoftMap_reset">Reset</string>
    <string name="MicrosoftMap_follow">Follow</string>
    <string name="MicrosoftMap_chase_plane">Chase Plane (Beta)</string>
    <string name="MicrosoftMap_fpv">FPV (Beta)</string>
    <string name="MicrosoftMap_satellite">Satellite</string>
    <string name="MicrosoftMap_streets">Streets + Buildings</string>
    <string name="ModeDisengageReason_user_disengaged">Mode Paused</string>
    <string name="Mode_disconnected">Waiting for drone...</string>
    <string name="Mode_ready">Ready to start</string>
    <string name="Mode_engaging">Starting Mode</string>
    <string name="Mode_disengaged">Mode Stopped</string>
    <string name="CameraFocusCalibration_title">Camera Focus Calibration</string>
    <string name="CameraFocusCalibration_finished">Calibration finished.</string>
    <string name="CameraFocusCalibration_type_distance">DISTANCE</string>
    <string name="CameraFocusCalibration_type_altitude">ALTITUDE</string>
    <string name="CameraFocusCalibration_mark_reference">Mark Reference</string>
    <string name="CameraFocusCalibration_drone_unavailable">Waiting for drone...</string>
    <string name="CameraFocusCalibration_serial_number_unavailable">Unable to read drone serial number. Please reconnect the drone.</string>
    <string name="CameraFocusCalibration_camera_unavailable">Unable to determine camera focus state...</string>
    <string name="CameraFocusCalibration_location_unavailable">Waiting for location...</string>
    <string name="CameraFocusCalibration_details_mark_reference">Mark a reference object to focus on.</string>
    <string name="CameraFocusCalibration_details_move_distance">Move %1$s away while pointing at the reference object with the gimbal at 0°.</string>
    <string name="CameraFocusCalibration_details_move_altitude">Fly %1$s above your takeoff location with the gimbal at -90°.</string>
    <string name="CameraFocusCalibration_details_ready">Ready to start calibration.</string>
    <string name="CameraFocusCalibration_details_busy">Calibrating (%1$s)...</string>
    <string name="CameraFocusCalibration_start">Start</string>
    <string name="CameraFocusCalibration_finish_error">Unable to calibrate, please try again.</string>
    <string name="CameraFocusCalibration_details_focus_distance">Continue focusing the camera by tapping the reference object on the screen (%1$s). Switch to focus from spot metering.</string>
    <string name="CameraFocusCalibration_details_focus_altitude">Continue focusing the camera by tapping the takeoff location on the screen (%1$s). Switch to focus from spot metering.</string>
    <string name="DroneOffsets_style_altYaw">YAW/ALT</string>
    <string name="DroneOffsets_style_position">POSITION</string>
    <string name="DroneOffsets_roll_trim">ROLL TRIM</string>
    <string name="DroneOffsets_rc_inputs">Caution: RC sticks enabled</string>
    <string name="DroneOffsets_relative_altitude_enabled">Caution: Auto altitude enabled</string>
    <string name="DroneOffsets_relative_altitude_disabled">Auto altitude disabled</string>
    <string name="DroneOffsets_more_resetGimbal">Gimbal Reset</string>
    <string name="DroneOffsets_more_levelGimbal">Gimbal 0° (Level)</string>
    <string name="DroneOffsets_more_nadirGimbal">Gimbal -90° (Nadir)</string>
    <string name="DroneOffsets_more_rollTrim">Gimbal Roll Trim</string>
    <string name="DroneOffsets_more_clearCameraFocusCalibrations">Clear Focus Calibrations</string>
    <string name="DroneOffsets_more_clearCameraFocusCalibrations_finished">Cleared %1$d calibration(s)</string>
    <string name="DJIDashboard_camera_video_stream_source_wide">Visible</string>
    <string name="DJIDashboard_camera_video_stream_source_zoom">Zoom</string>
    <string name="DJIDashboard_camera_video_stream_source_thermal">Thermal</string>
    <string name="DJIDashboard_camera_display_mode_visible">Visible</string>
    <string name="DJIDashboard_camera_display_mode_thermal">Thermal</string>
    <string name="DJIDashboard_camera_display_mode_both">Side-by-Side</string>
</resources>
