<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:visibility="invisible"
    android:background="@color/darkBlack_transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:clickable="true"
    android:focusable="true"
    tools:context=".CameraFocusCalibrationFragment">
    <ImageView
        android:id="@+id/titleImageView"
        android:src="@drawable/baseline_center_focus_strong_white_36"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/dismissButton"
        android:background="@drawable/baseline_close_white_24"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:text="@string/CameraFocusCalibration_title"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold"
        custom:layout_constraintEnd_toStartOf="@+id/dismissButton"
        custom:layout_constraintStart_toEndOf="@+id/titleImageView"
        custom:layout_constraintTop_toTopOf="@+id/titleImageView" />

    <Button
        android:id="@+id/type0Button"
        android:text="@string/CameraFocusCalibration_type_position"
        android:layout_height="24dp"
        android:layout_width="140dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="12dp"
        custom:layout_constraintTop_toBottomOf="@+id/titleTextView"
        custom:layout_constraintStart_toStartOf="parent"
        android:background="@color/darkGray"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/type1Button"
        android:text="@string/CameraFocusCalibration_type_altitude"
        android:layout_height="24dp"
        android:layout_width="140dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="12dp"
        custom:layout_constraintTop_toBottomOf="@+id/titleTextView"
        custom:layout_constraintEnd_toEndOf="parent"
        android:background="@color/darkGray"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/detailsTextView"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        android:scrollHorizontally="false"
        android:ellipsize="end"
        android:maxLines="2"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        custom:layout_constraintTop_toBottomOf="@+id/type0Button"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/markReferenceButton"
        android:text="@string/CameraFocusCalibration_mark_reference"
        android:layout_height="35dp"
        android:layout_width="140dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        android:background="@color/darkGray"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/referenceTextView"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="2dp"
        android:scrollbars="vertical"
        custom:layout_constraintTop_toTopOf="@+id/markReferenceButton"
        custom:layout_constraintStart_toEndOf="@+id/markReferenceButton"
        custom:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>